@@ -1,3 +1,11 @@
+2003-03-04  Paul Fine <pfine@delcomsys.com>
+
+	* src/EnetPHY.c : Added PHY reset function for the ts6 platform.
+	Changed delay to use HAL_DELAY_US instead of a nop for loop.
+	* src/if_fec.c : Invoke PHY reset function for ts6 platform, as
+	well as VADS platform.  Remove unneeded and incorrect invocation
+	data cache macros.
+	
 2002-12-12  Gary Thomas  <gthomas@ecoscentric.com>
 2002-12-12  Patrick Doyle <wpd@delcomsys.com>
 
